--- a/src/pug/include/head.pug
+++ b/src/pug/include/head.pug
@@ -26,4 +26,4 @@ head
   meta(property="twitter:url", content=url)
 
   link(rel="canonical" href=siteUrl)
-  link(rel='stylesheet', href='css/style.css')
+  link(rel='stylesheet', href='css/common.css')
