--- a/src/pug/include/head.pug
+++ b/src/pug/include/head.pug
@@ -1,5 +1,4 @@
 head
-  block page_data
   meta(charset='utf-8')
   title=siteTitle
   meta(name="description", content=description)
@@ -26,4 +25,4 @@ head
   meta(property="twitter:url", content=url)
 
   link(rel="canonical" href=siteUrl)
-  link(rel='stylesheet', href='css/common.css')
+  link(rel='stylesheet', href=`stat/${stat_version}/css/common.css`)
