--- a/src/pug/layout/default.pug
+++ b/src/pug/layout/default.pug
@@ -1,3 +1,5 @@
+- var stat_version = data.stat_version
+
 doctype html
 html(lang=ja)
   include ../include/head
@@ -8,4 +10,4 @@ html(lang=ja)
       include ../include/footer
 
     //- scripts
-    script(src='js/common.js')
+    script(src=`stat/${stat_version}/js/common.js`)
