jq、winstonを削除  パス適正化

--- a/src/html/page/index.pug
+++ b/src/html/page/index.pug
@@ -4,7 +4,7 @@ block body
   body
     h1 body
     ul
-      for item in data.page_data
+      for item in site_data.page_data
         li
           h2= item.title
           p= item.text
